# co-environmental-data

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CHARTER.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA-DICTIONARY.md  INSTALLED-BASE.md  NEXT-STEPS.md  PROJECT-MANAGEMENT.md  README.md  ROADMAP.md  accessibility-checklist.md  contributed-data-intake.md  data-bulletproofing-checklist.md  data-card.md  data-management-plan.md  data-quality-checklist.md  decision-log.md  responsible-data-checklist.md
.github/: ACCESS.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  engagement-sync.json  labels.yml  seed-github.sh
.github/ISSUE_TEMPLATE/: config.yml  data-issue.yml  task.yml
.github/scripts/: discover-pipelines.sh
.github/wiki-seeds/: Home.md  _Sidebar.md
.github/workflows/: README.md  monthly-data-refresh.yml  pipelines-ci.yml
.skills/data-intake/: SKILL.md
.skills/documentation/: SKILL.md
.skills/release-and-share/: SKILL.md
audits/: 2026-06-22-qa-audit.md  2026-06-23-pipelines-qa.md  2026-06-23-project-audit.md  README.md
audits/after-action/: 2026-06-18-data-liberation-aar.md  2026-06-18-data-project-aar.md  (+1 more)
context/: 2026 De Castro Research Award.docx  CUPIDS_Clinic_Proposal_v2.docx  architecture.md  methodology.md  source-inventory.md
docs/governance/: GOVERNANCE.md  (+3 more)
pipelines/: LANDING.md
pipelines/_core/: .gitignore  README.md  pyproject.toml
pipelines/_core/src/co_pipeline_core/: __init__.py  audit.py  clean.py  config.py  fetch.py  provenance.py  schema.py
pipelines/_core/tests/: conftest.py  test_audit.py  test_clean.py  test_config.py  test_fetch.py  test_provenance.py  test_schema.py
pipelines/reservoir-storage/: .gitignore  AGENTS.md  README.md  pyproject.toml
pipelines/reservoir-storage/data/lookups/: concepts.yaml  reservoirs.csv  sources.yaml
pipelines/reservoir-storage/dataverse/: DEPOSIT.md  dataset.json  deposit-dataverse.sh  deposit_dataverse.py
pipelines/reservoir-storage/docs/: data-dictionary.md  filter-pivot-recipes.md  survey-notes.md
pipelines/reservoir-storage/notebooks/: nb-01-retrieve.ipynb  nb-02-audit.ipynb  nb-03-cleanup.ipynb  nb-04-publish-csv.ipynb  reservoir-pipeline.ipynb
pipelines/reservoir-storage/scripts/: build_reservoirs_seed.py
pipelines/reservoir-storage/src/reservoir/: __init__.py  audit.py  clean.py  config.py  fetch.py  pipeline.py  provenance.py  schema.py  sources.py  stations.py
pipelines/reservoir-storage/src/reservoir/parsers/: __init__.py  dwr_cdss.py  northern_water.py  reclamation_rise.py
pipelines/reservoir-storage/tests/: test_dwr_cdss.py  test_fetch.py  test_northern_water.py  test_pipeline_cli.py  test_pipeline_integration.py  test_reclamation_rise.py  test_schema.py  test_sources.py  test_stations.py
pipelines/reservoir-storage/tests/fixtures/: dwr_cdss_stations_sample.json  dwr_cdss_storage_sample.json  northern_water_sample.json  reclamation_rise_storage_sample.json  rise_location_items_sample.json
pipelines/snowpack/: .gitignore  AGENTS.md  README.md  pyproject.toml
pipelines/snowpack/data/lookups/: concepts.yaml  sites.csv  sources.yaml
pipelines/snowpack/dataverse/: DEPOSIT.md  dataset.json  deposit-dataverse.sh  deposit_dataverse.py
pipelines/snowpack/docs/: data-dictionary.md  filter-pivot-recipes.md  survey-notes.md
pipelines/snowpack/notebooks/: snowpack-pipeline.ipynb
pipelines/snowpack/scripts/: build_sites_seed.py
pipelines/snowpack/src/snowpack/: __init__.py  audit.py  clean.py  config.py  fetch.py  pipeline.py  provenance.py  schema.py  sources.py  stations.py
pipelines/snowpack/src/snowpack/parsers/: __init__.py  _awdb.py  nrcs_snotel.py  nrcs_snowcourse.py
pipelines/snowpack/tests/: test_audit.py  test_fetch.py  test_nrcs_snotel.py  test_nrcs_snowcourse.py  test_pipeline_integration.py  test_schema.py  test_sources.py
pipelines/snowpack/tests/fixtures/: nrcs_snotel_sample.json  nrcs_snowcourse_sample.json
pipelines/streamflow/: .gitignore  AGENTS.md  README.md  pyproject.toml
pipelines/streamflow/data/lookups/: concepts.yaml  sites.csv  sources.yaml
pipelines/streamflow/dataverse/: DEPOSIT.md  dataset.json  deposit-dataverse.sh  deposit_dataverse.py
pipelines/streamflow/docs/: data-dictionary.md  filter-pivot-recipes.md  survey-notes.md
pipelines/streamflow/notebooks/: streamflow-pipeline.ipynb
pipelines/streamflow/scripts/: build_sites_seed.py
pipelines/streamflow/src/streamflow/: __init__.py  audit.py  clean.py  config.py  fetch.py  pipeline.py  provenance.py  schema.py  sources.py  stations.py
pipelines/streamflow/src/streamflow/parsers/: __init__.py  dwr_cdss.py  usgs_nwis.py
pipelines/streamflow/tests/: test_audit_cross_source.py  test_dwr_cdss.py  test_fetch.py  test_pipeline_integration.py  test_schema.py  test_sources.py  test_stations.py  test_usgs_nwis.py
pipelines/streamflow/tests/fixtures/: dwr_cdss_sample.json  usgs_nwis_sample.json
retro/: 2026-06-18-data-project-aar.md  2026-06-18-data-project-skill-revision-plan.md  2026-06-23-data-project-skill-revision-plan.md  2026-06-23-pipeline-deployments-aar.md  2026-06-23-project-revision-plan.md  data-liberation-aar.md
(+55 files in other folders)
