[project]
name = "co-pipeline-core"
version = "0.1.0"
description = "Shared core for the Colorado Environmental Data Hub liberation pipelines — domain-agnostic plumbing (provenance, fetch engine, clean orchestration, schema + CLI skeletons) factored out of the per-pipeline packages."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brian Keegan", email = "accounts@brianckeegan.com" }]
dependencies = [
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/co_pipeline_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
