[project]
name = "co-snowpack"
version = "0.1.0"
description = "Colorado snowpack (SWE) liberation pipeline (NRCS SNOTEL + snow courses via the AWDB REST API) — issue #11 of the Colorado Environmental Data Hub."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Brian Keegan", email = "accounts@brianckeegan.com" }]
dependencies = [
    "co-pipeline-core",          # shared plumbing (provenance, …) — path dep, see [tool.uv.sources]
    "pandas>=2.2",
    "pyarrow>=16",
    "pandera[pandas]>=0.20",
    "requests>=2.32",
    "requests-cache>=1.2",
    "tenacity>=8.5",
    "structlog>=24.1",
    "pyyaml>=6.0",
    "tabulate>=0.9",
    # notebook runtime — thin notebooks orchestrate the package
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5", "jupytext>=1.16", "nbstripout>=0.8"]
publish = ["sqlite-utils>=3.36", "datasette>=0.64",   # deferred: Datasette surface (roadmap)
           "pyDataverse>=0.3"]                         # Dataverse deposit kit (dataverse/)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snowpack"]

[tool.pytest.ini_options]
pythonpath = ["src", "../_core/src"]   # ../_core/src so co_pipeline_core imports under pytest
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.uv.sources]
co-pipeline-core = { path = "../_core", editable = true }
